Doc updates and fixes
- expand documentation notebooks
- reinstate numpy ufunc support
- allow dBUnits indexing
- show \um not um

--- a/doc/Index.ipynb
+++ b/doc/Index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3962081ee7d467335e8553d08f952bcff725dcbfaa3d078d4b97a5b4b170fced"
+  "signature": "sha256:7bb295f2da9e58ec97279af2eb7dc2072febfca3a583aa5ecfa83d0932518212"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,8 +22,37 @@
      "source": [
       "PhysicalQuantities is a python module that allows calculations to be aware of physical units. Built-in unit conversion ensures that calculations will result in the correct unit.\n",
       "\n",
-      "The module also contains an extension for IPython. This allows much simplified usage by typing in physical quantities as number and unit.\n",
-      "\n",
+      "The module also contains an extension for IPython. This allows much simplified usage by typing in physical quantities as number and unit:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = 1m ; b = 1s\n",
+      "print(\"a=\", a, \", b=\",b,\", a/b=\", a/b)"
+     ],
+     "language": "python",
+     "metadata": {
+      "run_control": {
+       "breakpoint": false
+      }
+     },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "a= 1 m , b= 1 s , a/b= 1.0 m/s\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "The Github repository for this module can be found here: https://github.com/juhasch/PhysicalQuantities\n",
       "\n",
       "This module is based on the IPython extension by Georg Brandl: https://bitbucket.org/birkenfeld/ipython-physics.\n",
@@ -42,11 +71,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* [Basics](pq-basics.ipynb)\n",
-      "* [IPython Extension](pq-ipython.ipynb)\n",
-      "* [dB Calculations](pq-dbunits.ipynb)\n",
-      "* [Numpy](pq-numpy.ipynb)\n",
-      "* [Uncertainties](pq-dbunits.ipynb)"
+      "* [Basics and Installation](pq-basics.ipynb)\n",
+      "* [Using the IPython Extension](pq-ipython.ipynb)\n",
+      "* [Doing dB Calculations](pq-dbunits.ipynb)\n",
+      "* [Using Numpy Arrays](pq-numpy.ipynb)\n",
+      "* [Practical Example - Calculate a RC Circuit](pq-example.ipynb)"
      ]
     },
     {
@@ -54,7 +83,11 @@
      "collapsed": false,
      "input": [],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "breakpoint": false
+      }
+     },
      "outputs": []
     }
    ],
