--- a/doc/pq-basics.ipynb
+++ b/doc/pq-basics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:94c7a8c1149b9d590ad71c5f1f58fc1a9721cc69ab47f306beac684387c72bf3"
+  "signature": "sha256:2863502e968c2a598804aab0b85254cf722177d016dc289a47eafc9eddfa5e8b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Back to [Index](index.ipynb)"
+      "Back to [Index](Index.ipynb)"
      ]
     },
     {
@@ -36,8 +36,17 @@
      "metadata": {},
      "source": [
       "The PhysicalQuantities module can be installed like any other Python module:\n",
-      "\n",
-      "`python setup.py install`"
+      " 1. Download package from https://github.com/ipython-contrib/IPython-notebook-extensions/archive/master.zip\n",
+      " 2. Unzpip\n",
+      " 3. Install package using `python setup.py install`"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This document describes the basic use and some internals of the Python module.\n",
+      "If you are using IPython or the IPython notebook, you might want to read the other example notebooks first."
      ]
     },
     {
@@ -158,15 +167,23 @@
     {
      "cell_type": "markdown",
      "metadata": {},
-     "source": []
+     "source": [
+      "Using `.to()` let's you convert to other representations of the unit. This can be used for scaling or to express the quantity in a derived unit. The `.base` property will convert "
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(g)\n",
-      "print(g.to('mm'))\n",
-      "print(g.base)"
+      "g = pq.PhysicalQuantity(1.1, 'm')\n",
+      "print(\"g = %s\" % g)\n",
+      "print(\"g in mm = %s\" %g.to('mm'))\n",
+      "x = pq.PhysicalQuantity(2, 'm*kg/s**2')\n",
+      "print(\"x = %s\" %x)\n",
+      "print(\"x in N = %s\" % x.to('N'))\n",
+      "u = 1 V\n",
+      "print(\"u = %s\" %u)\n",
+      "print(\"u in base units = %s\" %u.base)"
      ],
      "language": "python",
      "metadata": {},
@@ -175,13 +192,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1.1 m\n",
-        "1100.0 mm\n",
-        "1.1 m\n"
+        "g = 1.1 m\n",
+        "g in mm = 1100.0 mm\n",
+        "x = 2 m*kg/s^2\n",
+        "x in N = 2.0 N\n",
+        "u = 1 V\n",
+        "u in base units = 1.0 kg*m^2/A/s^3\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -260,37 +280,170 @@
      "prompt_number": 8
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Internal Representation"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Internally, a physical quantity is represented using two classes:\n",
+      " * `PhysicalQuantity` holding the value and the unit\n",
+      " * `PhysicalUnit` describing the unit"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = pq.Q([1,2,3], 'm**2*s**3/A**2/kg')\n",
+      "a.value"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "[1, 2, 3]"
+       ]
+      }
+     ],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The `value` attribute is basically only a container, allowing different types of values. Tested types are:\n",
+      " * integers\n",
+      " * floats\n",
+      " * complex numbers\n",
+      " * uncertainties\n",
+      " * numpy arrays\n",
+      " * lists"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a.unit"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "latex": [
+        "$m^2 \\cdot s^3/kg/A^2$ "
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "<PhysicalUnit m**2*s**3/kg/A**2>"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "type(a.unit)"
+     ],
+     "language": "python",
+     "metadata": {
+      "run_control": {
+       "breakpoint": false
+      }
+     },
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "PhysicalQuantities.Unit.PhysicalUnit"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The unit is stored in a `PhysicalUnit` class. This class has a number of attributes:\n",
+      " * `factor` - scaling factor from base units\n",
+      " * `powers` - list of base units contained in unit\n",
+      " * `prefixed` - unit is a scaled version of a base unit"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pq.Q(1,'mm').unit.factor, pq.Q(1,'mm').unit.prefixed"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 26,
+       "text": [
+        "(0.001, True)"
+       ]
+      }
+     ],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print(pq.base_names) # list of base units\n",
+      "print(a.unit.powers)\n",
+      "print(a.unit)"
+     ],
+     "language": "python",
+     "metadata": {
+      "run_control": {
+       "breakpoint": false
+      }
+     },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['m', 'kg', 's', 'A', 'K', 'mol', 'cd', 'rad', 'sr']\n",
+        "[2, -1, 3, -2, 0, 0, 0, 0, 0]\n",
+        "m^2*s^3/kg/A^2\n"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
      "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "breakpoint": false
+      }
+     },
      "outputs": []
     }
    ],
