--- a/doc/Index.ipynb
+++ b/doc/Index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7bb295f2da9e58ec97279af2eb7dc2072febfca3a583aa5ecfa83d0932518212"
+  "signature": "sha256:a263a9281d35304f9bfa106f44abab0db4fec3d51168adbec91876fb803c648b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,7 +72,8 @@
      "metadata": {},
      "source": [
       "* [Basics and Installation](pq-basics.ipynb)\n",
-      "* [Using the IPython Extension](pq-ipython.ipynb)\n",
+      "* [Using Physical Quantities in IPython](pq-ipython.ipynb)\n",
+      "* [Output Formatting](pq-formatting.ipynb)\n",
       "* [Doing dB Calculations](pq-dbunits.ipynb)\n",
       "* [Using Numpy Arrays](pq-numpy.ipynb)\n",
       "* [Practical Example - Calculate a RC Circuit](pq-example.ipynb)"
