--- a/doc/pq-ipython.ipynb
+++ b/doc/pq-ipython.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b648392c05dae73f944bbba981de51d5f1a903aba631d5c67c33e49fa56a28fb"
+  "signature": "sha256:12ec1089fba5c763ef2dcbb39ae2a8705844b6bd743de02a779e6517894ad928"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "PhysicalQuantities - IPython Extension"
+      "Using PhysicalQuantities in IPython"
      ]
     },
     {
@@ -53,7 +53,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -73,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -90,13 +90,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "d = 12.167 s^3\n",
+        "d = 12.166999999999996 s^3\n",
         "t = 3 A\n",
-        "v = 9328.03333333 s^3/A\n"
+        "v = 9328.033333333331 s^3/A\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -131,7 +131,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -170,11 +170,11 @@
        "text": [
         "1 V\n",
         "1000.0 mV\n",
-        "1000000.0 \u00b5V\n"
+        "1000000.0 uV\n"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -187,55 +187,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "f = 1N\n",
-      "print(\"f = %s\" % f)\n",
-      "print(\"f = %s\" % f.base)\n",
-      "print(\"f = %s\" % f.to('J/m'))\n"
-     ],
-     "language": "python",
-     "metadata": {
-      "run_control": {
-       "breakpoint": false
-      }
-     },
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "f = 1 N\n",
-        "f = 1.0 m*kg/s^2\n",
-        "f = 1.0 J/m\n"
-       ]
-      }
-     ],
-     "prompt_number": 41
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Pretty Printing"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Formatting the output display can be achieved in several ways:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a=1.23456 mm\n",
+      "a = 1 N * 1 m\n",
       "print(a)\n",
-      "print(\"{:.2}\".format(a))\n",
-      "print(\"%s\" % a)\n",
-      "print(\"%f\" % a) # this returns base unit: m\n",
-      "print(\"%.2f\" % a.mm_)"
+      "print(a.to('J'))"
      ],
      "language": "python",
      "metadata": {
@@ -248,107 +202,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1.23456 mm\n",
-        "1.2 mm\n",
-        "1.23456 mm\n",
-        "0.001235\n",
-        "1.23\n"
+        "1 m*N\n",
+        "1.0 J\n"
        ]
       }
      ],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The quantity can be pretty printed in the IPython notebook:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "v"
-     ],
-     "language": "python",
-     "metadata": {
-      "run_control": {
-       "breakpoint": false
-      }
-     },
-     "outputs": [
-      {
-       "latex": [
-        "9328.03333333 $s^3/A$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "9328.03333333 s^3/A"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Another way to display quantities is using the `Latex` function. Unfortunately, mixing math equations and Python's `.format()` needs a little trick because of the `{}`brackets."
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from IPython.display import display, Math, Latex\n",
-      "def disp(str):\n",
-      "    display(Latex(str))    \n",
-      "disp(\"$v_{min}$ is %s\" %v)\n",
-      "disp(\"$v_{min}$ is \"+\"{:.2f}\".format(v))\n",
-      "disp(\"$v_{min}$ is %s\" % (\"{:.2f}\".format(v))) # Alternatively"
-     ],
-     "language": "python",
-     "metadata": {
-      "run_control": {
-       "breakpoint": false
-      }
-     },
-     "outputs": [
-      {
-       "latex": [
-        "$v_{min}$ is 9328.03333333 s^3/A"
-       ],
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<IPython.core.display.Latex at 0xa396b38>"
-       ]
-      },
-      {
-       "latex": [
-        "$v_{min}$ is 9328.03 s^3/A"
-       ],
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<IPython.core.display.Latex at 0xa396ac8>"
-       ]
-      },
-      {
-       "latex": [
-        "$v_{min}$ is 9328.03 s^3/A"
-       ],
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<IPython.core.display.Latex at 0xa396be0>"
-       ]
-      }
-     ],
-     "prompt_number": 31
+     "prompt_number": 30
     },
     {
      "cell_type": "heading",
@@ -390,7 +249,7 @@
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -411,7 +270,8 @@
        "breakpoint": false
       }
      },
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -425,17 +285,17 @@
      "outputs": [
       {
        "latex": [
-        "2.00+/-0.25 $m$"
+        "2.0+/-0.25 $m$"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 24,
        "text": [
-        "2.00+/-0.25 m"
+        "2.0+/-0.25 m"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -453,13 +313,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 25,
        "text": [
         "4.0+/-1.0 m^2"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -476,13 +336,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 26,
        "text": [
         "0.0+/-0 m^2"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 26
     },
     {
      "cell_type": "heading",
@@ -517,13 +377,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 27,
        "text": [
-        "<IPython.core.display.HTML at 0xa3468d0>"
+        "<IPython.core.display.HTML object>"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -535,7 +395,8 @@
        "breakpoint": false
       }
      },
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 27
     }
    ],
    "metadata": {}
