Update dBUnit documentation notebook

--- a/doc/pq-dbunits.ipynb
+++ b/doc/pq-dbunits.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c3f1b0b2e8055c29d7fc57d9eecb044077415f62e544915b92d49880985c4ecb"
+  "signature": "sha256:d9f6b2a753400872084661237007f3096061afe6b524e42c124c3c4b74aac93f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,9 @@
     {
      "cell_type": "heading",
      "level": 1,
-     "metadata": {},
+     "metadata": {
+      "heading_collapsed": false
+     },
      "source": [
       "PhysicalQuantities - dBUnits"
      ]
@@ -28,15 +30,32 @@
      "metadata": {},
      "source": [
       "The IPython extension for dB units is loaded using\n",
-      "`%load_ext PhysicalQuantities.dB_units`\n",
-      "\n",
-      "It provides easy "
+      "`%load_ext PhysicalQuantities.dBUnit_ipython`"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%reload_ext PhysicalQuantities.dBUnit_ipython"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 63
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The extension provides convenient of working with dB values:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%precision 2\n",
       "p = 0 dBm\n",
       "print(p)\n",
       "print(p.dBW)\n",
@@ -49,24 +68,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.0 dBm\n",
-        "-30.0 dBW\n",
+        "0 dBm\n",
+        "-30 dBW\n",
         "0.001 W\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 62
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%reload_ext PhysicalQuantities.dB_units"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "source": [
+      "In addition to dB scaled physical units, relative dB values can be used:"
+     ]
     },
     {
      "cell_type": "code",
@@ -82,11 +97,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "3.0 dBm\n"
+        "3 dBm\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 64
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Conversion between units is easy using dynamic attributes:"
+     ]
     },
     {
      "cell_type": "code",
@@ -102,29 +124,65 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "-30.0 dBW\n",
+        "-30 dBW\n",
         "-30\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 65
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The list of available dB scaled units is shown below:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#from PhysicalQuantities.dBunit import dBUnit"
+      "import PhysicalQuantities.dBUnit as dbu\n",
+      "dbu.dB_units"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 82,
+       "text": [
+        "{'dB': ('', 0, 1),\n",
+        " 'dBA': ('A', 0, 20),\n",
+        " 'dBV': ('V', 0, 20),\n",
+        " 'dBW': ('W', 0, 10),\n",
+        " 'dBd': ('', 2.15, 10),\n",
+        " 'dBi': ('', 0, 10),\n",
+        " 'dBm': ('W', -30, 10),\n",
+        " 'dBmA': ('A', -30, 20),\n",
+        " 'dBmV': ('V', -30, 20),\n",
+        " 'dBnA': ('A', -90, 20),\n",
+        " 'dBnV': ('V', -90, 20),\n",
+        " 'dBuA': ('A', -60, 20),\n",
+        " 'dBuV': ('V', -60, 20)}"
+       ]
+      }
+     ],
+     "prompt_number": 82
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Manual generation looks like this:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a = dBUnit(0.1,'dBm', islog=True)\n",
+      "a = dBUnit(33.,'dBm', islog=True)\n",
       "print(a)"
      ],
      "language": "python",
@@ -134,11 +192,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.1 dBm\n"
+        "33.00 dBm\n"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
@@ -152,13 +210,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 68,
        "text": [
-        "(0.1, 'dBm')"
+        "(33.00, 'dBm')"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
@@ -171,34 +229,35 @@
      "outputs": [
       {
        "latex": [
-        "0.0010232929922807546 $W$ (<a href=\"https://en.wikipedia.org/wiki/Watt\" target=\"_blank\">Watt</a>)"
+        "2.00 $W$"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 69,
        "text": [
-        "0.0010232929922807546 W"
+        "1.99526231497 W"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 69
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a=1.12345mm"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 24
+     "source": [
+      "You can work with dB-values by adding or subtracting other dB values or multiplying/dividing by a int or float number:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(\"{:.2f}\".format(a.cm))"
+      "a = 6 dB\n",
+      "print a + 1.1 dB\n",
+      "print a - 1.1 dB\n",
+      "print a/2\n",
+      "print a\n",
+      "print a*2"
      ],
      "language": "python",
      "metadata": {},
@@ -207,11 +266,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.11 cm\n"
+        "7.10 dB\n",
+        "4.90 dB\n",
+        "3 dB\n",
+        "6 dB\n",
+        "12 dB\n"
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -219,7 +282,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 71
     }
    ],
    "metadata": {}
